--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <hr>
-    <h1 class="name">Hugo Mauger</h1>
+    <h1 class="name">Hugoo Mauger</h1>
     <hr>
     <img src="https://fakeimg.pl/150/?text=Hugo" alt="Photo de Hugo">
     <p class="job-title">Recherche d'un poste de responsable marketing</p>
