--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="fr">
 <head>
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-<link rel="manifest" href="/site.webmanifest">
-<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
-<meta name="msapplication-TileColor" content="#da532c">
-<meta name="theme-color" content="#ffffff">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
     <title>Hugo Mauger</title>
     <style>
 
@@ -15,14 +15,14 @@
 </head>
 <body>
     <hr>
-    <h1 class="name">Hugoo Mauger</h1>
+    <h1 class="name">Hugo Mauger</h1>
     <hr>
     <img src="https://fakeimg.pl/150/?text=Hugo" alt="Photo de Hugo">
     <p class="job-title">Recherche d'un poste de responsable marketing</p>
     <p>Passionné par l'innovation et les stratégies digitales, je m'engage à contribuer avec créativité et détermination au succès de projets marketing. Maîtrise des outils marketing digital (Facebook ads, Google ads), gestion budgétaire, maîtrise des outils de PAO, polyvalence et réactivité, excellent relationnel.</p>
     <hr>
     <h2>Compétences</h2>
-    <table borde="1">
+    <table border="1">
         <caption>Outils Marketing Digital</caption>
         <tr>
             <th>Compétences</th>
@@ -58,18 +58,18 @@
         </tr>
     </table>
     
-    <p>2023 - 2026<br>Normandie Web School<br>Bachelor spécialité Marketing digital, apprentissage de compétences en communication</p>
-    <p>2020 - 2023<br>Lycée Thomas Corneille<br>Baccalauréat spécialité STMG</p>
+    <p>2023 - 2026<br><a href="https://normandiewebschool.fr/">Normandie Web School</a><br>Bachelor spécialité Marketing digital, apprentissage de compétences en communication</p>
+    <p>2020 - 2023<br><a href="https://thomas-corneille.lycee.ac-normandie.fr/">Lycée Thomas Corneille</a><br>Baccalauréat spécialité STMG</p>
     <hr>
     <h2>Expériences</h2>
     <hr>
-    <p>2023<br>Freelance Marketing Digital<br>Gestion de publicité pour des professionnels, mise en place de stratégie de communication, gestion de projets, analyse de données.</p>
-    <p>2019<br>Cycles Darnanvil - Vendeur<br>Conseiller dans un magasin de vélos, aides et conseils de clients pour les réparations et achats de vélo, travail en équipe.</p>
+    <p>2023<br><a href="https://www.aceupmedia.com/home">Freelance Marketing Digital</a><br>Gestion de publicité pour des professionnels, mise en place de stratégie de communication, gestion de projets, analyse de données.</p>
+    <p>2019<br><a href="https://www.cycles-darnanville.com/">Cycles Darnanvil - Vendeur</a><br>Conseiller dans un magasin de vélos, aides et conseils de clients pour les réparations et achats de vélo, travail en équipe.</p>
     <hr>
     <h2>Contact</h2>
     <hr>
     <p>(+33) 0786859404</p>
-    <p>hmauger@normandiewebschool.fr</p>
+    <p><a href="mailto:hmauger@normandiewebschool.fr">hmauger@normandiewebschool.fr</a></p>
     <p><a href="https://www.linkedin.com/in/hugo-mauger-76b251263/" class="linkedin">Profil LinkedIn</a></p>
     <p>11 Rue Jacques Prevert</p>
 </body>
