--- a/index.html
+++ b/index.html
@@ -14,63 +14,88 @@
     </style>
 </head>
 <body>
-    <hr>
-    <h1 class="name">Hugo Mauger</h1>
-    <hr>
-    <img src="https://fakeimg.pl/150/?text=Hugo" alt="Photo de Hugo">
-    <p class="job-title">Recherche d'un poste de responsable marketing</p>
-    <p>Passionné par l'innovation et les stratégies digitales, je m'engage à contribuer avec créativité et détermination au succès de projets marketing. Maîtrise des outils marketing digital (Facebook ads, Google ads), gestion budgétaire, maîtrise des outils de PAO, polyvalence et réactivité, excellent relationnel.</p>
-    <hr>
-    <h2>Compétences</h2>
-    <table border="1">
-        <caption>Outils Marketing Digital</caption>
-        <tr>
-            <th>Compétences</th>
-            <th>Niveau</th>
-        </tr>
-        <tr>
-            <td>Facebook Ads</td>
-            <td>Avancé</td>
-        </tr>
-        <tr>
-            <td>Google Ads</td>
-            <td>Avancé</td>
-        </tr>
-        <tr>
-            <td>Gestion budgétaire</td>
-            <td>Avancé</td>
-        </tr>
-        <tr>
-            <td>PAO</td>
-            <td>Avancé</td>
-        </tr>
-        <tr>
-            <td>Polyvalence</td>
-            <td>Avancé</td>
-        </tr>
-        <tr>
-            <td>Réactivité</td>
-            <td>Avancé</td>
-        </tr>
-        <tr>
-            <td>Excellent relationnel</td>
-            <td>Avancé</td>
-        </tr>
-    </table>
-    
-    <p>2023 - 2026<br><a href="https://normandiewebschool.fr/">Normandie Web School</a><br>Bachelor spécialité Marketing digital, apprentissage de compétences en communication</p>
-    <p>2020 - 2023<br><a href="https://thomas-corneille.lycee.ac-normandie.fr/">Lycée Thomas Corneille</a><br>Baccalauréat spécialité STMG</p>
-    <hr>
-    <h2>Expériences</h2>
-    <hr>
-    <p>2023<br><a href="https://www.aceupmedia.com/home">Freelance Marketing Digital</a><br>Gestion de publicité pour des professionnels, mise en place de stratégie de communication, gestion de projets, analyse de données.</p>
-    <p>2019<br><a href="https://www.cycles-darnanville.com/">Cycles Darnanvil - Vendeur</a><br>Conseiller dans un magasin de vélos, aides et conseils de clients pour les réparations et achats de vélo, travail en équipe.</p>
-    <hr>
-    <h2>Contact</h2>
-    <hr>
-    <p>(+33) 0786859404</p>
-    <p><a href="mailto:hmauger@normandiewebschool.fr">hmauger@normandiewebschool.fr</a></p>
-    <p><a href="https://www.linkedin.com/in/hugo-mauger-76b251263/" class="linkedin">Profil LinkedIn</a></p>
-    <p>11 Rue Jacques Prevert</p>
+    <header>
+        <hr>
+        <h1 class="name">Hugo Mauger</h1>
+        <hr>
+    </header>
+    <main>
+        <section>
+            <figure>
+                <img src="https://fakeimg.pl/150/?text=Hugo" alt="Photo de Hugo">
+            </figure>
+            <p class="job-title">Recherche d'un poste de responsable marketing</p>
+            <article>
+                <p>Passionné par l'innovation et les stratégies digitales, je m'engage à contribuer avec créativité et détermination au succès de projets marketing. Maîtrise des outils marketing digital (Facebook ads, Google ads), gestion budgétaire, maîtrise des outils de PAO, polyvalence et réactivité, excellent relationnel.</p>
+            </article>
+        </section>
+        <section>
+            <h2>Compétences</h2>
+            <article>
+                <table border="1">
+                    <caption>Outils Marketing Digital</caption>
+                    <thead>
+                        <tr>
+                            <th>Compétences</th>
+                            <th>Niveau</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Facebook Ads</td>
+                            <td>Avancé</td>
+                        </tr>
+                        <tr>
+                            <td>Google Ads</td>
+                            <td>Avancé</td>
+                        </tr>
+                        <tr>
+                            <td>Gestion budgétaire</td>
+                            <td>Avancé</td>
+                        </tr>
+                        <tr>
+                            <td>PAO</td>
+                            <td>Avancé</td>
+                        </tr>
+                        <tr>
+                            <td>Polyvalence</td>
+                            <td>Avancé</td>
+                        </tr>
+                        <tr>
+                            <td>Réactivité</td>
+                            <td>Avancé</td>
+                        </tr>
+                        <tr>
+                            <td>Excellent relationnel</td>
+                            <td>Avancé</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </article>
+        </section>
+        <section>
+            <h2>Formation</h2>
+            <article>
+                <p>2023 - 2026<br><a href="https://normandiewebschool.fr/">Normandie Web School</a><br>Bachelor spécialité Marketing digital, apprentissage de compétences en communication</p>
+                <p>2020 - 2023<br><a href="https://thomas-corneille.lycee.ac-normandie.fr/">Lycée Thomas Corneille</a><br>Baccalauréat spécialité STMG</p>
+            </article>
+        </section>
+        <section>
+            <h2>Expériences</h2>
+            <article>
+                <p>2023<br><a href="https://www.aceupmedia.com/home">Freelance Marketing Digital</a><br>Gestion de publicité pour des professionnels, mise en place de stratégie de communication, gestion de projets, analyse de données.</p>
+                <p>2019<br><a href="https://www.cycles-darnanville.com/">Cycles Darnanvil - Vendeur</a><br>Conseiller dans un magasin de vélos, aides et conseils de clients pour les réparations et achats de vélo, travail en équipe.</p>
+            </article>
+        </section>
+        <section>
+            <h2>Contact</h2>
+            <address>
+                <p>(+33) 0786859404</p>
+                <p><a href="mailto:hmauger@normandiewebschool.fr">hmauger@normandiewebschool.fr</a></p>
+                <p><a href="https://www.linkedin.com/in/hugo-mauger-76b251263/" class="linkedin">Profil LinkedIn</a></p>
+                <p>11 Rue Jacques Prevert</p>
+            </address>
+        </section>
+    </main>
 </body>
 </html>
